<resources>
    <string name="app_name">waves of Food</string>
    <string name="next">Next</string>
    <string name="image">image</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="waves_of_food">waves of food\n</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">password</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="design_by_ndevquest">Design By\nDevQuest</string>
    <string name="logo_image">logo_image</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="continue_with">Continue With</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>

    <string name="name">Name</string>
    <string name="or">or</string>
    <string name="sign_up_with">Sign Up With</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cart" />
    <string name="buy">Buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="_5">$5</string>
    <string name="food_name">Food Name</string>
    <string name="save_information">Save Information</string>
    <string name="login_to_your_admindashboard_account">admindashboard\n</string>
</resources>